crates/biome_html_parser/tests/html_specs/ok/svelte/each_with_method_call_key.svelte
{#each numbers as number, index (number.toString())}
  <p>{number}</p>
{/each}

{#each numbers as number (key(number))}
  <p>{number}</p>
{/each}
