crates/biome_html_parser/tests/html_specs/error/svelte/each_missing_closing_paren.svelte
{#each items as item, index (key}
{/each}
